# cs4044-voter-api

./: Cargo.toml  Rocket.toml
src/: main.rs
templates/: auth.html.tera  authfail.html.tera  done.html.tera  index.html.hbs  index.html.tera  invalid.html.tera  tally.html.tera  vote.html.tera
