[package]
name = "voter-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["secrets","tls"]}
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rand_core = { version = "0.6.4", features = ["std"] }
crossbeam = "0.8.2"
argon2 = "0.4.1"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

